<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/navigation_activity"
...
    <item
        android:id="@+id/navigation_blacklist"
        android:icon="@drawable/ic_blacklist_icon"
        android:title="@string/blacklist" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics"
        />

</menu>
